# NF-DiagMC

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md
Holstein/: CMakeLists.txt  Holstein.cpp  sim.ini
Holstein/ML/: CMakeLists.txt  eval.cpp  train.cpp
Holstein/ML/Model/: Model.h  Option.h
Holstein/ML/Model/src/: Model.cpp  Option.cpp
Holstein/ML/Results/Aff/1_50/: Mod.pt  sim.ini
Holstein/ML/Results/Aff/2_50/: Mod.pt  sim.ini
Holstein/ML/Results/Aff/3_50/: Mod.pt  sim.ini
Holstein/ML/Results/Aff/4_50/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/1_2_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/1_3_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/1_4_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/1_5_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/2_5_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/2_6_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/3_4_20/: Mod.pt  sim.ini
Holstein/ML/Results/RQS/3_6_20/: Mod.pt  sim.ini
Holstein/Model/: Diagram.cpp  Observable.cpp  Updates.cpp
Holstein/Results/Local/: simulation.out
Holstein/Results/Local/0.1/: simulation.out
Holstein/Results/Local/0.2/: simulation.out
Holstein/Results/Local/0.3/: simulation.out
Holstein/Results/Local/0.4/: simulation.out
Holstein/Results/Local/0.5/: simulation.out
Holstein/Results/Local/0.6/: simulation.out
Holstein/Results/Local/0.7/: simulation.out
Holstein/Results/Local/0.8/: simulation.out
Holstein/Results/Local/0.9/: simulation.out
Holstein/Results/Local/1.0/: simulation.out
Holstein/Results/Neural/: simulation.out
Holstein/Results/Neural/0.1/: simulation.out
Holstein/Results/Neural/0.2/: simulation.out
Holstein/Results/Neural/0.3/: simulation.out
Holstein/Results/Neural/0.4/: simulation.out
Holstein/Results/Neural/0.5/: simulation.out
Holstein/Results/Neural/0.6/: simulation.out
Holstein/Results/Neural/0.7/: simulation.out
Holstein/Results/Neural/0.8/: simulation.out
Holstein/Results/Neural/0.9/: simulation.out
include/DMC/: Archetypes.h  Manager.h  SimOptions.h
include/DMC/Utils/Containers/: CiclicArray.h  OrderedArray.h
include/DMC/Utils/Math/: Axis.h  D1Function.h
include/DMC/Utils/Math/Interpolators/: LinearFunApprox.h  NewtonFunApprox.h
include/DMC/Utils/Math/Inverters/: Bijection.h
include/DMC/Utils/Statis/: CDFInverse.h  Histogram.h
include/NF/: fmanager.h
include/NF/Archetypes/: distribution.h  flow.h  transformer.h
include/NF/Distributions/: base.h  target.h
include/NF/Flows/: Std.h  norm.h
include/NF/Nets/: MLP.h  MLinear.h
include/NF/Utils/: RQS.h  histogram.h
src/: Axis.cpp  Bijection.cpp  CDFInverse.cpp  CMakeLists.txt  Histogram.cpp  LinearFunApprox.cpp  MLP.cpp  MLinear.cpp  NewtonFunApprox.cpp  RQS.cpp  SimOptions.cpp  Std.cpp  base.cpp  fmanager.cpp  histogram.cpp  norm.cpp  target.cpp
